# catalyst

./: .clang-format  .clang-tidy  .clangd  .codecov.yml  .codefactorignore  .dep-versions  .flake8  .git-blame-ignore-revs  .gitignore  .gitmodules  .headers.h  .pre-commit-config.yaml  .pylintrc  .readthedocs.yaml  0_probs.mlir  0_state.mlir  1_Afterpipe.mlir  CITATION.cff  CMakeLists.txt  Chlorophyll_README.md  DYNAMIC_CIRCUIT_EXECUTION_FLOW.md  FRONTEND.md  MANIFEST.in  Makefile  MergeUnitaryGateTest.mlir  PROGRESS.md  PROJECT_STATE.md  PhaseFoldingTest.mlir  README.md  README.rst  RUN_TESTS.md  SESSION_LOG.md  a.py  acceptance_c2_pearson_m1_with_coeff.py  acceptance_c5_er_arg_m3.py  acceptance_c8_cnot_count.py  acceptance_c9_landscape_overlap.py  activate_dev_from_wheel.sh  build.py  circuit_to_qasm3.py  (+54 more)
frontend/: CMakeLists.txt  Makefile  README.rst  __init__.py  _lightning.kokkos.schema2.toml  _lightning.qubit.schema2.toml  catalyst_cli_shim.py  pl_python_device.py  qjit_device_patch.py  scan.sh
frontend/PennyLane_Catalyst.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
frontend/catalyst/: CMakeLists.txt  __init__.py  __main__.py  _commands.py  _configuration.py  _revision.py  _version.py  abstract_hamiltonian.py  ag_primitives.py  ag_utils.py  ast_parser.py  autograph.py  compilation_pipelines.py  compiled_functions.py  compiler.py  compiler_process.py  cuda_quantum_integration.py  debug.py  default_pipelines.cpp  executor.py  from_plxpr.py  from_plxpr_utils.py  get_mlir.py  jax_primitives.py  jax_primitives_utils.py  jax_tape.py  jax_tracer.py  jax_tracer2.py  jit.py  kernel.py  libloader.py  param_evaluator.py  passes.py  pennylane_extensions.py  pipelines.py  preprocess.py  primitive_lowering_rules.py  python_callbacks.py  qfunc.py  qiskit_importer.py  (+3 more)
frontend/catalyst/api_extensions/: __init__.py  assertion.py  callbacks.py  control_flow.py  differentiation.py  doqaoa.py  error_mitigation.py  function_maps.py  pipeline.py  quantum_operators.py  quantum_passes.py  rem_postprocessing.py  target.py
frontend/catalyst/autograph/: __init__.py  ag_primitives.py  operator_update.py  transformer.py
frontend/catalyst/backline/: __init__.py  device.py
frontend/catalyst/callback/: __init__.py  implementation.py
frontend/catalyst/cuda/: __init__.py  catalyst_to_cuda_interpreter.py  cuda.toml  cuda_quantum.toml
frontend/catalystcuda/: __init__.py  catalyst_to_cuda_interpreter.py  cuda.toml
frontend/circuit/: 0_circuit.mlir  4_AfterBufferizationStage.mlir  5_AfterMLIRToLLVMDialectConversion.mlir
frontend/cuda/: __init__.py
frontend/inspect_features/: check_openqasm3.py  circuit.mlir
frontend/mlir_quantum/: ir.py
frontend/test/: conftest.py  pytest.ini  test_utils.py
frontend/test/lit/: conftest.py  (+70 more)
mlir/: CMakeLists.txt  Makefile  MergeUnitaryGatesTest.mlir  README.rst
mlir/decomposition-rules/: pre-compile.py  precompile.py  test_precompile.py
mlir/include/: CMakeLists.txt  RegisterAllPasses.h
mlir/lib/: Bufferization.md  CMakeLists.txt
mlir/patches/: 0001-Add-dependency.patch  0001-Use-IR-from-JAX.patch  0002-Use-CEXT-from-JAX.patch  0003-Do-not-infer-results.patch  0004-Remove-quantum-CEXT-import.patch  0005-Remove-CEXT-from-gradient-bindings.patch  FunctionOpInterface-bufferization.patch  add-constructor-for-from-elements-op.patch  add-lmhlo-dependency.patch  callOp-bufferization.patch  do-not-infer-result.patch  enzyme-nvvm-fabs-intrinsics.patch  llvm-bufferization-segfault.patch  llvm-disable-region-cache-for-bufferization.patch  llvm-nanobind.patch  llvm-python-bindinggen-annotations.patch  mhlo-Add-MLIRTransforms-in-transforms-CMakeList.patch  mhlo-add-back-necessary-passes.patch  mhlo-remove-shardy.patch  mhlo-rename-sort.patch  mlir-buffer-deallocation.patch  moduleOp-bufferization.patch  moduleOp-mhlo.patch  remove-gradient-cext-import.patch  remove-quantum-cext-import.patch  scf-for-preprocessing.patch  test-plugin-with-catalyst.patch  tomlplusplus-literal-spacing.patch  use-cext-from-jax.patch  use-ir-from-jax.patch
mlir/python/: CMakeLists.txt  PyCompilerDriver.cpp  QuantumExtension.cpp
mlir/scripts/: new-dialect.py
mlir/standalone/: CMakeLists.txt
mlir/test/: CMakeLists.txt  lit.cfg.py  lit.site.cfg.py.in
mlir/tools/: CMakeLists.txt
mlir/unittests/: CMakeLists.txt
runtime/: .clang-tidy  .gitignore  CMakeLists.txt  Makefile  README.rst  log  makelog
runtime/examples/: Makefile  README.rst  grad_qfunc.ll  probs_qfunc.ll  state_qfunc.ll
runtime/extensions/: CMakeLists.txt  StateVectorDynamicCPU.cpp  StateVectorDynamicCPU.hpp  StateVectorLQubitDynamic.cpp  StateVectorLQubitDynamic.hpp
runtime/include/: DataView.hpp  DynamicLibraryLoader.hpp  Exception.hpp  ExecutorCAPI.h  MemRefUtils.hpp  MemRefView.hpp  OQDRuntimeCAPI.h  QuantumDevice.hpp  RemoteCAPI.h  RuntimeCAPI.h  Transport.hpp  TransportBackend.h  TransportCAPI.h  Types.h  Utils.hpp
runtime/lib/: CMakeLists.txt
runtime/qir-stdlib/: .gitignore  Cargo.toml  Makefile
runtime/tests/: CMakeLists.txt  TestUtils.hpp  Test_CacheManager.cpp  Test_CoreQIS.cpp  Test_DLManager.cpp  Test_DataView.cpp  Test_DecoderLUTDecoder.cpp  Test_DecoderLUTDecoderUtils.cpp  Test_DecompGraphCore.cpp  Test_DecompGraphSolver.cpp  Test_DevicePool.cpp  Test_Driver.cpp  Test_GateSet.cpp  Test_Gradient.cpp  Test_InstructionStrBuilder.cpp  Test_LightningCoreQIS.cpp  Test_LightningCoreQIS_Kokkos.cpp  Test_LightningDriver.cpp  Test_LightningGateSet.cpp  Test_LightningGradient.cpp  Test_LightningMeasures.cpp  Test_LoadingThirdParty.cpp  Test_MBQC.cpp  Test_Measures.cpp  Test_NullDevice.cpp  Test_NullQubit.cpp  Test_OQDDevice.cpp  Test_OQD_OpenAPLGeneration.cpp  Test_OpenQasmBuilder.cpp  Test_OpenQasmDevice.cpp  Test_QubitManager.cpp  Test_RSDecomp.cpp  Test_RSDecompEllipse.cpp  Test_RSDecompGridProblems.cpp  Test_RSDecompNormSolver.cpp  Test_RSDecompNormalForms.cpp  Test_RSDecompRings.cpp  Test_RSDecompUtils.cpp  Test_RSDecomp_ellipse.cpp  Test_RSDecomp_grid_problems.cpp  (+10 more)
runtime/utils/: CMakeLists.txt  CatalystPython.cpp  CatalystPython.hpp  Python.cpp  Python.hpp
(+2459 files in other folders)
