[tool.black]
line-length = 100
extend-exclude = '''
(
  frontend/catalyst/python_bindings
  | mlir/llvm-project
  | mlir/mlir-hlo
  | mlir/Enzyme
  | build
  | env
)
'''

[tool.isort]
profile = "black"
skip = ["frontend/test/conftest.py"]
extend_skip_glob = [
  "mlir/llvm-project/*",
  "mlir/mlir-hlo/*",
  "mlir/Enzyme/*",
  "mlir/build/*",
  "runtime/build/*",
  ".git/*",
  ".vscode/*"
]

[build-system]
requires = ["setuptools>=62", "wheel", "pybind11>=2.7.0", "numpy>=1.22"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
cache_dir='/tmp/.pytest_cache'
testpaths='frontend/tests/pytest'

[tool.coverage.run]
branch = true
source = [
    "./frontend/catalyst/",
]
omit = [
    "*/python_bindings/*",
    "./frontend/catalyst/_version.py",
]

[tool.coverage.html]
directory = "coverage_html_report"

[tool.coverage.report]
sort = "Cover"
