[tool.black]
line-length = 100
extend-exclude = '''
(
  frontend/catalyst/python_bindings
  | mlir/llvm-project
  | mlir/mlir-hlo
  | mlir/Enzyme
  | build
  | env
)
'''

[tool.isort]
py_version=311
profile = "black"
skip = [
  "catalyst/mlir/llvm-project",
  "frontend/catalyst/test/test_oqc/conftest.py",
  "frontend/catalyst/third_party",
  "frontend/test/conftest.py",
]
extend_skip_glob = [
  "mlir/llvm-project/*",
  "mlir/mlir-hlo/*",
  "mlir/Enzyme/*",
  "mlir/build/*",
  "runtime/build/*",
  ".git/*",
  ".vscode/*",
  "*venv*/*",
  "_deps/*",
]
known_first_party = ["catalyst"]
known_third_party = ["diastatic-malt", "jax", "jaxlib", "numpy", "pennylane"]

[tool.bandit]
skips = ["B607"]

[build-system]
requires = ["setuptools>=62", "wheel", "pybind11>=2.7.0", "numpy>=1.22,<2"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
cache_dir='/tmp/.pytest_cache'
testpaths=["frontend/test/pytest", "frontend/test/test_oqc/oqc"]

[tool.coverage.run]
branch = true
source = [
    "./frontend/catalyst/",
]
omit = [
    "*/python_bindings/*",
    "./frontend/catalyst/_version.py",
    "./frontend/catalyst/_revision.py",
]

[tool.coverage.html]
directory = "coverage_html_report"

[tool.coverage.report]
sort = "Cover"
