[tool.black]
line-length = 100
extend-exclude = '''
(
  frontend/catalyst/python_bindings
  | mlir/llvm-project
  | mlir/mlir-hlo
  | mlir/Enzyme
  | build
  | env
  | demos
  | standalone
)
'''

[tool.isort]
py_version=311
profile = "black"
skip = [
  "catalyst/mlir/llvm-project",
  "frontend/catalyst/test/test_oqc/conftest.py",
  "frontend/catalyst/third_party",
  "frontend/test/conftest.py",
  "standalone",
]
extend_skip_glob = [
  "mlir/llvm-project/*",
  "mlir/mlir-hlo/*",
  "mlir/Enzyme/*",
  "mlir/build/*",
  "runtime/build/*",
  ".git/*",
  ".vscode/*",
  "*venv*/*",
  "_deps/*",
  "standalone/*",
]
known_first_party = ["catalyst"]
known_third_party = ["diastatic-malt", "jax", "jaxlib", "numpy", "pennylane"]

[tool.bandit]
skips = ["B607"]

[build-system]
requires = ["setuptools>=62", "wheel", "pybind11>=2.12.0", "numpy!=2.0.0", "nanobind", "cmake", "ninja"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
cache_dir='/tmp/.pytest_cache'
testpaths=["frontend/test/pytest", "frontend/test/test_oqc/oqc"]

[tool.coverage.run]
branch = true
source = [
    "./frontend/catalyst/",
]
omit = [
    "*/python_bindings/*",
    "./frontend/catalyst/_version.py",
    "./frontend/catalyst/_revision.py",
    "./standalone/*",
]

[tool.coverage.html]
directory = "coverage_html_report"

[tool.coverage.report]
sort = "Cover"
